syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/alexptdev/auth-api/pkg/user_v1;user_v1";

service UserV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(UpdateRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

enum UserRole {
  UNKNOWN = 0;
  ADMIN = 1;
  USER  = 2;
}

message CreateRequest {
  string Name = 1;
  string Email = 2;
  string Password = 3;
  string PasswordConfirm = 4;
  UserRole Role = 5;
}

message CreateResponse {
  int64 Id = 1;
}

message GetRequest {
  int64 Id = 1;
}

message GetResponse {
  int64 Id = 1;
  string Name = 2;
  string Email = 3;
  UserRole Role = 4;
  google.protobuf.Timestamp CreatedAt = 5;
  google.protobuf.Timestamp UpdatedAt = 6;
}

message UpdateRequest {
  int64 Id = 1;
  google.protobuf.StringValue Name = 2;
  google.protobuf.StringValue Email = 3;
  UserRole Role = 4;
}

message DeleteRequest {
  int64 Id = 1;
}